err/pystretch.err
Listing '.'...
Listing './bin'...
Compiling './bin/pystretch_test.py'...
***   File "./bin/pystretch_test.py", line 59
    print "Could not open %s." %srcfile
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/pystretcher.py'...
***   File "./bin/pystretcher.py", line 23
    print 'ERROR: Python bindings of GDAL version 1.8.0 or later required'
                                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyStretch-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pystretch'...
Listing './lib/python3.5/site-packages/pystretch/core'...
Compiling './lib/python3.5/site-packages/pystretch/core/Timer.py'...
***   File "./lib/python3.5/site-packages/pystretch/core/Timer.py", line 12
    print "Total time to process the image was " + str(totaltime) + " seconds."
                                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pystretch/custom'...
Listing './lib/python3.5/site-packages/pystretch/filter'...
Listing './lib/python3.5/site-packages/pystretch/linear'...
Listing './lib/python3.5/site-packages/pystretch/masks'...
Listing './lib/python3.5/site-packages/pystretch/nonlinear'...
Listing './lib/python3.5/site-packages/pystretch/plot'...
Compiling './lib/python3.5/site-packages/pystretch/plot/Plot.py'...
***   File "./lib/python3.5/site-packages/pystretch/plot/Plot.py", line 4
    print "Pylab not installed."
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pystretch/tests'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
